# serializer version: 1
# name: test_all_entities[0][chain_actuator_zws12_state.json][cover.zws_12-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.zws_12',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.6-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][chain_actuator_zws12_state.json][cover.zws_12-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ZWS 12\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.zws_12',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][cover_aeotec_nano_shutter_state.json][cover.nano_shutter_v_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.nano_shutter_v_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.3-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_aeotec_nano_shutter_state.json][cover.nano_shutter_v_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Nano Shutter V.3',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.nano_shutter_v_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][cover_fibaro_fgr222_state.json][cover.test_location_fgr_222_test_cover-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_location_fgr_222_test_cover',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 191>,
    'translation_key': None,
    'unique_id': '3245146787.42-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_fibaro_fgr222_state.json][cover.test_location_fgr_222_test_cover-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 97,
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'fgr 222 test cover',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 191>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_location_fgr_222_test_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_all_entities[0][cover_fibaro_fgr223_state.json][cover.test_location_fgr_223_test_cover-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_location_fgr_223_test_cover',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 191>,
    'translation_key': None,
    'unique_id': '3245146787.10-38-1-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_fibaro_fgr223_state.json][cover.test_location_fgr_223_test_cover-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 100,
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'fgr 223 test cover',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 191>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_location_fgr_223_test_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_all_entities[0][cover_fibaro_fgr223_state.json][cover.test_location_fgr_223_test_cover_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_location_fgr_223_test_cover_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(2)',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '(2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.10-38-2-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_iblinds_v2_state.json][cover.window_blind_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.window_blind_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.54-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_iblinds_v2_state.json][cover.window_blind_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 30,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'blind',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Window Blind Controller',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.window_blind_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_all_entities[0][cover_iblinds_v3_state.json][cover.blind_west_bed_1_horizontal_slats_angle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.blind_west_bed_1_horizontal_slats_angle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Horizontal Slats Angle',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Horizontal Slats Angle',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 240>,
    'translation_key': None,
    'unique_id': '3245146787.131-106-0-currentValue-23',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_iblinds_v3_state.json][cover.blind_west_bed_1_horizontal_slats_angle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Blind West Bed 1 Horizontal Slats Angle',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 240>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.blind_west_bed_1_horizontal_slats_angle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][cover_merten_507801_state.json][cover.connect_roller_shutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.connect_roller_shutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.41-38-1-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_merten_507801_state.json][cover.connect_roller_shutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Connect Roller Shutter',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.connect_roller_shutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][cover_merten_507801_state.json][cover.connect_roller_shutter_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.connect_roller_shutter_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(2)',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '(2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.41-38-2-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_nice_ibt4zwave_state.json][cover.portail-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.portail',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GATE: 'gate'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.72-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_nice_ibt4zwave_state.json][cover.portail-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'gate',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Portail',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.portail',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][cover_qubino_shutter_state.json][cover.flush_shutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.flush_shutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.20-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_qubino_shutter_state.json][cover.flush_shutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Flush Shutter',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.flush_shutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][cover_zvidar_state.json][cover.window_blind_controller_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.window_blind_controller_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.270-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][cover_zvidar_state.json][cover.window_blind_controller_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Window Blind Controller',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.window_blind_controller_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][cover.gp9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.gp9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.46-38-8-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][cover.gp9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.gp9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][cover.gp9_10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.gp9_10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(10)',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': '(10)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.46-38-10-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][cover.gp9_10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 (10)',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.gp9_10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][cover.gp9_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.gp9_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(9)',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': '(9)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.46-38-9-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][cover.gp9_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 55,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 (9)',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.gp9_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_all_entities[1][cover_qubino_shutter_state_firmware_14_2_0.json][cover.shelly_fw_14_2_0_test_cover-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.shelly_fw_14_2_0_test_cover',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 191>,
    'translation_key': None,
    'unique_id': '3245146787.5-38-1-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][cover_qubino_shutter_state_firmware_14_2_0.json][cover.shelly_fw_14_2_0_test_cover-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'shelly fw 14 2 0 test cover',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 191>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.shelly_fw_14_2_0_test_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[1][cover_qubino_shutter_state_firmware_14_2_0.json][cover.shelly_fw_14_2_0_test_cover_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.shelly_fw_14_2_0_test_cover_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(2)',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '(2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.5-38-2-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][cover_zw062_state.json][cover.aeon_labs_garage_door_controller_gen5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.aeon_labs_garage_door_controller_gen5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GARAGE: 'garage'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '3245146787.12-102-0-currentState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][cover_zw062_state.json][cover.aeon_labs_garage_door_controller_gen5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'garage',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aeon Labs Garage Door Controller Gen5',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.aeon_labs_garage_door_controller_gen5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[2][shelly_europe_ltd_qnsh_001p10_state.json][cover.wave_shutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.wave_shutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 191>,
    'translation_key': None,
    'unique_id': '3245146787.5-38-1-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[2][shelly_europe_ltd_qnsh_001p10_state.json][cover.wave_shutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wave Shutter',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 191>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.wave_shutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[2][shelly_europe_ltd_qnsh_001p10_state.json][cover.wave_shutter_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.wave_shutter_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(2)',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': '(2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.5-38-2-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[5][window_covering_outbound_bottom.json][cover.node_2_outbound_bottom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.node_2_outbound_bottom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Outbound Bottom',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Outbound Bottom',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-106-0-currentValue-13',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[5][window_covering_outbound_bottom.json][cover.node_2_outbound_bottom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 53,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Node 2 Outbound Bottom',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.node_2_outbound_bottom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
